# automata

./: .gitignore  README.md  automata.opam  dune-project
docs/: 00-roadmap.md  01-dfa-simulator.md  02-nfa-simulator.md  03-nfa-to-dfa.md  04-regex-engine.md  05-lexer.md  06-cfg-parser.md  07-turing-machine.md
lib/: dfa.ml  dune  nfa.ml  nfa_to_dfa.ml  regex.ml  regex_ast.ml  regex_bt.ml  regex_lexer.ml  regex_nfa.ml  regex_parser.ml  turing.ml
test/: dune  test_automata.ml  test_dfa.ml  test_nfa.ml  test_nfa_to_dfa.ml  test_regex.ml  test_regex_bt.ml  test_regex_nfa.ml  test_regex_parser.ml  test_turing.ml
